--- a/Resume.html
+++ b/Resume.html
@@ -9,13 +9,13 @@
       margin: 0;
       display: flex;
       height: 100vh;
-      font-family: Arial, sans-serif;
+      font-family: Garamond;
     }
 
     /* LEFT SIDEBAR */
     .sidebar {
       width: 5em;
-      background-color: white;
+      background-color: #69A46A;
       display: flex;
       flex-direction: column;
       align-items: center;
@@ -33,7 +33,7 @@
     }
 
     .sidebar a:hover {
-      background-color: #f2f2f2;
+      background-color: #DDEDDD;
     }
 
     /* RIGHT CONTENT */
@@ -42,7 +42,6 @@
       padding: 2em;
       overflow-y: auto;
     }
-
     /* RESUME IMAGE */
     .resume-container {
       display: flex;
@@ -51,11 +50,13 @@
     }
 
     .resume-container img {
-      max-width: 90%;
-      height: auto;
-      display: block;
-      max-height: 85%;
-    }
+  max-width: 85%;
+  height: auto;
+  display: block;
+  margin-left: 5em;   /* shift right */
+}
+
+
   </style>
 </head>
 
@@ -73,7 +74,7 @@
   <!-- MAIN CONTENT -->
   <main class="content">
     <div class="resume-container">
-      <img src="resume.jpeg" alt="Resume">
+      <img src="Images/resume.jpeg" alt="Resume">
     </div>
   </main>
 
