--- a/contact.html
+++ b/contact.html
@@ -9,14 +9,13 @@
       margin: 0;
       display: flex;
       height: 100vh;
-      font-family: Arial, sans-serif;
-      background-color: #fafafa;
+      font-family: Garamond;
     }
 
     /* LEFT SIDEBAR */
     .sidebar {
       width: 5em;
-      background-color: white;
+      background-color: #69A46A;
       display: flex;
       flex-direction: column;
       align-items: center;
@@ -34,82 +33,91 @@
     }
 
     .sidebar a:hover {
-      background-color: #f2f2f2;
+      background-color: #DDEDDD;
     }
 
-    /* RIGHT CONTENT */
-    .content {
-      flex: 1;
-      padding: 2em;
-      overflow-y: auto;
-      display: flex;
-      justify-content: center;
-      align-items: flex-start;
-    }
+    
+/* RIGHT CONTENT */
+.content {
+  flex: 1;
+  padding: 2em;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
 
-    /* CONTACT SECTION */
-    #contact {
-      background: white;
-      padding: 2em;
-      max-width: 500px;
-      width: 100%;
-      border-radius: 8px;
-      box-shadow: 0 4px 10px rgba(0, 0, 0, 0.08);
-    }
+/* CONTACT CARD */
+#contact {
+  background: #ffffff;
+  padding: 2.5em;
+  max-width: 480px;
+  width: 100%;
+  border-radius: 10px;
+  box-shadow: 0 10px 25px rgba(0, 0, 0, 0.08);
+  border-top: 6px solid #69A46A; /* visual link to sidebar */
+}
 
-    #contact h2 {
-      margin-top: 0;
-      margin-bottom: 1em;
-      text-align: center;
-    }
+/* HEADER */
+#contact h2 {
+  margin-top: 0;
+  margin-bottom: 1.5em;
+  text-align: center;
+  font-weight: normal;
+  letter-spacing: 0.05em;
+  color: #2e3d2e;
+}
 
-    /* FORM LAYOUT */
-    #contact form {
-      display: flex;
-      flex-direction: column;
-    }
+/* FORM */
+#contact form {
+  display: flex;
+  flex-direction: column;
+}
 
-    #contact label {
-      display: flex;
-      flex-direction: column;
-      margin-bottom: 1em;
-      font-size: 0.9em;
-    }
+#contact label {
+  display: flex;
+  flex-direction: column;
+  margin-bottom: 1.2em;
+  font-size: 0.85em;
+  color: #2e3d2e;
+}
 
-    #contact input,
-    #contact textarea {
-      padding: 0.6em;
-      margin-top: 0.3em;
-      border: 1px solid #ccc;
-      border-radius: 4px;
-      font-size: 0.9em;
-      font-family: inherit;
-    }
+#contact input,
+#contact textarea {
+  padding: 0.6em;
+  margin-top: 0.4em;
+  border: 1px solid #cdd8cd;
+  border-radius: 5px;
+  font-size: 0.9em;
+  font-family: inherit;
+  background-color: #f9fbf9;
+}
 
-    #contact input:focus,
-    #contact textarea:focus {
-      outline: none;
-      border-color: #000000;
-    }
+#contact input:focus,
+#contact textarea:focus {
+  outline: none;
+  border-color: #69A46A;
+  background-color: #ffffff;
+}
 
-    #contact textarea {
-      resize: vertical;
-    }
+/* BUTTON */
+#contact button {
+  margin-top: 1em;
+  padding: 0.75em;
+  background-color: #69A46A;
+  color: #ffffff;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  font-size: 0.9em;
+  letter-spacing: 0.05em;
+  transition: background 0.2s ease, transform 0.1s ease;
+}
 
-    #contact button {
-      margin-top: 1em;
-      padding: 0.8em;
-      background-color: #000000;
-      color: rgb(166, 166, 166);
-      border: none;
-      border-radius: 4px;
-      cursor: pointer;
-      font-size: 1em;
-    }
+#contact button:hover {
+  background-color: #5b915c;
+  transform: translateY(-1px);
+}
 
-    #contact button:hover {
-      background-color: #ffffff;
-    }
   </style>
 </head>
 
